{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 124,
  "lineage": "b7a91d07-1ac1-e5eb-1549-59982cb55146",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:801042914980:instance/i-0b446e21d6927ce1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b446e21d6927ce1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ede53b2227bceea7",
            "private_dns": "ip-10-0-1-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.69",
            "public_ip": "35.175.214.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9dd2480cd813f08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0445e566d7341301e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca4dc32699aa2c0e",
            "tags": {
              "Name": "collect1"
            },
            "tags_all": {
              "Name": "collect1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0445e566d7341301e"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:801042914980:instance/i-0dd506dd9d9653755",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd506dd9d9653755",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-001b1fe19f68b5d50",
            "private_dns": "ip-10-0-3-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.249",
            "public_ip": "44.204.247.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-032422a1b66816c6b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0445e566d7341301e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064a065a5c8b11975",
            "tags": {
              "Name": "collect2"
            },
            "tags_all": {
              "Name": "collect2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0445e566d7341301e"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:801042914980:instance/i-0367fa0693d34a3ee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0367fa0693d34a3ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a105d1c63bfa8561",
            "private_dns": "ip-10-0-5-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.133",
            "public_ip": "3.89.107.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa00d96b3bbf73c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0445e566d7341301e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c95b88c4145ef6e4",
            "tags": {
              "Name": "collect3"
            },
            "tags_all": {
              "Name": "collect3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0445e566d7341301e"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_subnet.public3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:internet-gateway/igw-07c89228b7cf9f684",
            "id": "igw-07c89228b7cf9f684",
            "owner_id": "801042914980",
            "tags": {
              "Name": "collect-IGW"
            },
            "tags_all": {
              "Name": "collect-IGW"
            },
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Application_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:801042914980:loadbalancer/app/kana-lb/cd54f46551b1f8a5",
            "arn_suffix": "app/kana-lb/cd54f46551b1f8a5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "kana-lb-1240415580.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:801042914980:loadbalancer/app/kana-lb/cd54f46551b1f8a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kana-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0445e566d7341301e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-064a065a5c8b11975"
              },
              {
                "subnet_id": "subnet-0c95b88c4145ef6e4"
              },
              {
                "subnet_id": "subnet-0ca4dc32699aa2c0e"
              }
            ],
            "subnets": [
              "subnet-064a065a5c8b11975",
              "subnet-0c95b88c4145ef6e4",
              "subnet-0ca4dc32699aa2c0e"
            ],
            "tags": {
              "Name": "kana_Lb"
            },
            "tags_all": {
              "Name": "kana_Lb"
            },
            "vpc_id": "vpc-0878270bbf3e3275e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:801042914980:listener/app/kana-lb/cd54f46551b1f8a5/2afc7b91c822c183",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:801042914980:listener/app/kana-lb/cd54f46551b1f8a5/2afc7b91c822c183",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:801042914980:loadbalancer/app/kana-lb/cd54f46551b1f8a5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Application_LB",
            "aws_lb_target_group.target_G",
            "aws_security_group.allow_traffic",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_G",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7",
            "arn_suffix": "targetgroup/kana-TG/a51a60d86cd052a7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "kana-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7-20230205140209413800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7",
            "target_id": "i-0b446e21d6927ce1a"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_lb_target_group.target_G",
            "aws_security_group.allow_traffic",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_inst2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7-20230205140229053400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7",
            "target_id": "i-0dd506dd9d9653755"
          },
          "dependencies": [
            "aws_instance.web-server2",
            "aws_lb_target_group.target_G",
            "aws_security_group.allow_traffic",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_inst3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7-20230205140010726900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:801042914980:targetgroup/kana-TG/a51a60d86cd052a7",
            "target_id": "i-0367fa0693d34a3ee"
          },
          "dependencies": [
            "aws_instance.web-server3",
            "aws_lb_target_group.target_G",
            "aws_security_group.allow_traffic",
            "aws_subnet.public3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:route-table/rtb-010e707db8f961f40",
            "id": "rtb-010e707db8f961f40",
            "owner_id": "801042914980",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c89228b7cf9f684",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "collect-route"
            },
            "tags_all": {
              "Name": "collect-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b52921ad5c564f9",
            "route_table_id": "rtb-010e707db8f961f40",
            "subnet_id": "subnet-0ca4dc32699aa2c0e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub",
            "aws_subnet.public1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0792d7f7d48a0a697",
            "route_table_id": "rtb-010e707db8f961f40",
            "subnet_id": "subnet-064a065a5c8b11975"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub",
            "aws_subnet.public2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e297e2bddc8be48",
            "route_table_id": "rtb-010e707db8f961f40",
            "subnet_id": "subnet-0c95b88c4145ef6e4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub",
            "aws_subnet.public3",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:security-group/sg-0445e566d7341301e",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0445e566d7341301e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "traffic",
            "name_prefix": "",
            "owner_id": "801042914980",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "collect_pub"
            },
            "tags_all": {
              "Name": "collect_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:subnet/subnet-0d68f746b53d5f567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d68f746b53d5f567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801042914980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "collect1-priv"
            },
            "tags_all": {
              "Name": "collect1-priv"
            },
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:subnet/subnet-0f46e05ff11a2fc28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46e05ff11a2fc28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801042914980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "collect2-priv"
            },
            "tags_all": {
              "Name": "collect2-priv"
            },
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:subnet/subnet-0611b80b26b6dae04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0611b80b26b6dae04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801042914980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "collect3-priv"
            },
            "tags_all": {
              "Name": "collect3-priv"
            },
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:subnet/subnet-0ca4dc32699aa2c0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca4dc32699aa2c0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801042914980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "collect1-pub"
            },
            "tags_all": {
              "Name": "collect1-pub"
            },
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:subnet/subnet-064a065a5c8b11975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064a065a5c8b11975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801042914980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "collect2-pub"
            },
            "tags_all": {
              "Name": "collect2-pub"
            },
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:subnet/subnet-0c95b88c4145ef6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c95b88c4145ef6e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801042914980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "collect3-pub"
            },
            "tags_all": {
              "Name": "collect3-pub"
            },
            "vpc_id": "vpc-0878270bbf3e3275e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801042914980:vpc/vpc-0878270bbf3e3275e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8117170e811ba8c",
            "default_route_table_id": "rtb-0ffa838b8707099d6",
            "default_security_group_id": "sg-02669047400664fb8",
            "dhcp_options_id": "dopt-0f16df111bbc0eb97",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0878270bbf3e3275e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffa838b8707099d6",
            "owner_id": "801042914980",
            "tags": {
              "Name": "collection"
            },
            "tags_all": {
              "Name": "collection"
            }
          }
        }
      ]
    }
  ]
}